list features; add minifed version

--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="urlhighlight.css" />
-        <script src="urlhighlight.js"></script>
+        <script src="urlhighlight.min.js"></script>
     </head>
     <body>
         <script>
